--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get: ^4.5.1
+  http: ^0.13.3
+  
 
 dev_dependencies:
   flutter_test:
